scrollbar fix

--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -1028,7 +1028,6 @@ a:hover .header-profile-image {
   html,body {
   }
   .content {
-    height: 100%;
     padding-top: 49px; 
   }
 
